--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
                 </ul>
             </nav>
         </header>
+        <main>
+            <img src="Fotos/fotohome.jpg" width="500" alt="Devaria - Olá Mundo!">
+        </main>
     </body>
 </html>
