--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
         <main>
             <img src="Fotos/fotohome.jpg" width="500" alt="Devaria - Olá Mundo!">
         </main>
+        <footer>
+            <section>
+                <span> contato@devaria.com.br</span> <br />
+                <span> Conheça nosso canal do YouTube</span>
+            </section>
+        </footer>
     </body>
 </html>
