criação pagina devstars

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8" />
+        <meta name="description" content="A Devaria é uma escola de formação de Programadores"/>
+        <meta name="keywords" content="devaria, Programadores, programação"/>
+        <meta name="author" content="Guilherme Mariano" />
+        <meta http-equiv="Refresh" content="300" />
         <title> Olá Mundo!</title>
     </head>
     <body>
@@ -12,11 +16,27 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Professores.html">Professores</a></li>
                     <li><a href="FaleConosco.html">Fale Conosco</a></li>
+                    <li><a href="Devstars.html">Devstars</a></li>
                 </ul>
             </nav>
         </header>
         <main>
+            <section>
+                <figure>
             <img src="Fotos/fotohome.jpg" width="500" alt="Devaria - Olá Mundo!">
+            <figcaption>Foto de Capa Devaria</figcaption>
+                </figure>
+                </section>
+                <!-- Video descontinuado
+                <section>
+                    <di>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/pY0gf7PONIs?si=WEoH7hua2cubsNrm" title="Apresentação" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </di>
+                </section>
+                -->
+                <video width="320" height="240" controls="controls">
+                    <source src="Videos/nascerdosol.mp4" type="video/mp4">
+                </video>
         </main>
         <footer>
             <section>
